--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,12 @@
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "openai": "^5.22.0",
     "pbjs": "^0.0.14",
     "protobufjs": "^7.4.0",
     "reflect-metadata": "^0.2.2",
